--- a/index.html
+++ b/index.html
@@ -6,10 +6,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/style.css">
+
 </head>
 
 <body>
-
+  <section class="top-banner">
+    <div class="half-width">
+      <h1>welcome to </h1>
+      <h1><span class="orange-color"> shihab ahmed</span> world</h1>
+      <h3>laboriosam omnis laudantium eligendi provident quod!</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit rerum repellendus ab, tempora
+        perferendis
+        architecto dolore sint, nobis quas debitis reiciendis doloribus libero beatae. Qui sequi itaque rerum
+        perspiciatis
+        molestiae sunt, quibusdam id quas iusto rem odio quam doloribus officia nam explicabo fugiat quidem similique
+        deleniti necessitatibus neque consectetur nulla.</p>
+      <a class="btn" target="black" href="https://www.google.com/">Hire me</a>
+    </div>
+    <div class="half-width">
+      <img src="/images/bg.png" width="200px" alt="">
+    </div>
+  </section>
 
 </body>
 
