--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
       <img src="/images/bg.png" width="200px" alt="">
     </div>
   </section>
+  <section class="dream-big">
+    <div class="half-width">
+      <img src="/images/shihab.png" alt="">
+    </div>
+    <div class="half-width">
+      <h2>Dream big</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem cumque labore facere vero, consequatur
+        reprehenderit eos saepe aliquam fugit, reiciendis maxime cupiditate atque ipsum, quos ullam nesciunt! Placeat,
+        laudantium laboriosam.</p>
+      <a class="download" target="blank" href="https://www.youtube.com/">Download Youtube</a>
+    </div>
+  </section>
 
 </body>
 
