--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <section class="top-banner">
+  <section class="top-banner flexible-container">
     <div class="half-width">
       <h1>welcome to </h1>
       <h1><span class="orange-color"> shihab ahmed</span> world</h1>
@@ -31,7 +31,7 @@
       <img src="/images/bg.png" width="200px" alt="">
     </div>
   </section>
-  <section class="dream-big">
+  <section class="dream-big flexible-container">
     <div class="half-width">
       <img src="/images/shihab.png" alt="">
     </div>
@@ -43,6 +43,35 @@
       <a class="download" target="blank" href="https://www.youtube.com/">Download Youtube</a>
     </div>
   </section>
+  <section class="exprience-area">
+    <h1>Exprience</h1>
+    <div class="flexible-container">
+      <div id="web-dev-baby" class="exprience-item">
+        <h1 class="orange-color">full stack developer</h1>
+        <h3>2020-2021 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, dolorum.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab unde voluptate facilis, quisquam cumque,
+          reprehenderit minima consequuntur dignissimos aliquid placeat vel quo earum at molestiae sapiente assumenda
+          necessitatibus, harum quod ea iure! Amet, est expedita eaque ea officia consequuntur rem! Tempora, repellat?
+          Cum
+          beatae fugit veniam atque eos, dignissimos maiores.</p>
+      </div>
+      <div id="web-dev-exprience" class="exprience-item">
+        <h1 class="orange-color">baby developer</h1>
+        <h3>2022-2023 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora, maxime.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla tenetur dolores aperiam dicta quis
+          repellendus
+          laudantium incidunt nesciunt doloremque officia, placeat eligendi pariatur reiciendis blanditiis ut
+          distinctio,
+          nobis esse. Rem minus aspernatur officiis animi eius quos? Fugit eius beatae dolore dolor et. Laborum
+          quibusdam
+          ipsa ex expedita, quisquam minus culpa!</p>
+      </div>
+    </div>
+
+  </section>
+  <footer>
+    <p>@peter parkar 2023 Lorem ipsum dolor sit amet.</p>
+  </footer>
 
 </body>
 
